# starlet-math

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: tests.yml
inc/starlet-math/: constants.hpp  mat4.hpp  transform.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vertex.hpp
tests/: CMakeLists.txt
